// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MaskedViewIOS /> should render as expected: should deep render when mocked (please verify output manually) 1`] = `
<RCTMaskedView>
  <View
    pointerEvents="none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <Text>
        Basic Mask
      </Text>
    </View>
  </View>
  <View />
</RCTMaskedView>
`;

exports[`<MaskedViewIOS /> should render as expected: should deep render when not mocked (please verify output manually) 1`] = `
<RCTMaskedView>
  <View
    pointerEvents="none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View>
      <Text>
        Basic Mask
      </Text>
    </View>
  </View>
  <View />
</RCTMaskedView>
`;

exports[`<MaskedViewIOS /> should render as expected: should shallow render as <MaskedViewIOS /> when mocked 1`] = `
<MaskedViewIOS
  maskElement={
    <View>
      <Text>
        Basic Mask
      </Text>
    </View>
  }
>
  <View />
</MaskedViewIOS>
`;

exports[`<MaskedViewIOS /> should render as expected: should shallow render as <MaskedViewIOS /> when not mocked 1`] = `
<MaskedViewIOS
  maskElement={
    <View>
      <Text>
        Basic Mask
      </Text>
    </View>
  }
>
  <View />
</MaskedViewIOS>
`;
